--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "X TROID",
+  "name": "Black lion",
   "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.com/yureshofficial/X-Troid",
-  "logo": "https://telegra.ph/file/3b403e1d0943bceda8133.jpg&name=900x900",
+  "repository": "https://github.com/Theekshanamax/Black-lion-",
+  "logo": "https://i.ibb.co/FbpsN0j/5a4d7ce4c85d0d5c53b91e69735d00e2-01.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
