--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "𝐐𝐮𝐞𝐞𝐧 𝐀𝐧𝐲𝐚 𝐌𝐃-𝐯𝟐",
+  "name": "Black lion ",
   "description": "whatsapp md bot build with nodejs",
-  "repository": "https://github.COM/PikaBotz/Anya-pika-MD-V2",
-  "logo": "https://i.ibb.co/bgfFFjF/Videoshot-20221026-164328.jpg&name=900x900",
+  "repository": "https://github.com/Theekshanamax/Black-lion-",
+  "logo": "https://i.ibb.co/FbpsN0j/5a4d7ce4c85d0d5c53b91e69735d00e2-01.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
